--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:37:16 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:37:59 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,9 +141,9 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Luke Watson</td>
-      <td class="bigbold">-7</td>
-      <td>Cameron Smith(W) -3
-+1 thru 3</td>
+      <td class="bigbold">-6</td>
+      <td>Cameron Smith(W) -2
++2 thru 4</td>
       <td>Scottie Scheffler -2
 +1 thru 1</td>
       <td>Corey Conners -1
@@ -157,11 +157,11 @@ E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Tom Davis</td>
-      <td class="bigbold">-7</td>
-      <td>Cameron Smith -3
-+1 thru 3</td>
+      <td class="bigbold">-6</td>
       <td>Dustin Johnson(W) -2
 +1 thru 15</td>
+      <td>Cameron Smith -2
++2 thru 4</td>
       <td>Patrick Cantlay -1
 +1 thru 14</td>
       <td>Corey Conners -1
@@ -173,11 +173,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 2</td>
-      <td class="bigbold">-6</td>
-      <td>Cameron Smith -3
-+1 thru 3</td>
+      <td class="bigbold">-5</td>
       <td>Scottie Scheffler -2
 +1 thru 1</td>
+      <td>Cameron Smith -2
++2 thru 4</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Tyrrell Hatton E
@@ -189,11 +189,11 @@ E thru 15</td>
     </tr>
     <tr>
       <td class="bigbold">Doug Muir</td>
-      <td class="bigbold">-6</td>
-      <td>Cameron Smith -3
-+1 thru 3</td>
+      <td class="bigbold">-5</td>
       <td>Scottie Scheffler(W) -2
 +1 thru 1</td>
+      <td>Cameron Smith -2
++2 thru 4</td>
       <td>Hideki Matsuyama -1
 -1 thru 2</td>
       <td>Will Zalatoris E
@@ -205,9 +205,9 @@ E thru 15</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-6</td>
-      <td>Cameron Smith(W) -3
-+1 thru 3</td>
+      <td class="bigbold">-5</td>
+      <td>Cameron Smith(W) -2
++2 thru 4</td>
       <td>Scottie Scheffler -2
 +1 thru 1</td>
       <td>Corey Conners -1
@@ -221,11 +221,11 @@ E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Mark MacKave</td>
-      <td class="bigbold">-6</td>
-      <td>Cameron Smith -3
-+1 thru 3</td>
+      <td class="bigbold">-5</td>
       <td>Scottie Scheffler -2
 +1 thru 1</td>
+      <td>Cameron Smith -2
++2 thru 4</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Will Zalatoris E
@@ -237,9 +237,9 @@ E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Ron Harrington</td>
-      <td class="bigbold">-6</td>
-      <td>Cameron Smith -3
-+1 thru 3</td>
+      <td class="bigbold">-5</td>
+      <td>Cameron Smith -2
++2 thru 4</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Talor Gooch -1
@@ -253,9 +253,9 @@ E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">The Dub</td>
-      <td class="bigbold">-6</td>
-      <td>Cameron Smith(W) -3
-+1 thru 3</td>
+      <td class="bigbold">-5</td>
+      <td>Cameron Smith(W) -2
++2 thru 4</td>
       <td>Scottie Scheffler -2
 +1 thru 1</td>
       <td>Patrick Cantlay -1
@@ -266,38 +266,6 @@ E thru 12</td>
 E thru 12</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Hadrian&#39;s Wall</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith -3
-+1 thru 3</td>
-      <td>Patrick Cantlay -1
-+1 thru 14</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Will Zalatoris E
-+1 thru 14</td>
-      <td class="greyout leftborder">Jon Rahm(W) +1
--1 thru 14</td>
-      <td class="greyout">Viktor Hovland +3
-+3 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Team Steve</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith(W) -3
-+1 thru 3</td>
-      <td>Scottie Scheffler -2
-+1 thru 1</td>
-      <td>Patrick Cantlay -1
-+1 thru 14</td>
-      <td>Shane Lowry +1
-E thru 5</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-+3 thru 13</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
@@ -316,20 +284,52 @@ E thru 5</td>
 -1 thru 2</td>
     </tr>
     <tr>
-      <td class="bigbold">The Resort</td>
+      <td class="bigbold">CRED</td>
       <td class="bigbold">-4</td>
-      <td>Cameron Smith(W) -3
-+1 thru 3</td>
+      <td>Dustin Johnson -2
++1 thru 15</td>
+      <td>Scottie Scheffler -2
++1 thru 1</td>
+      <td>Patrick Cantlay -1
++1 thru 14</td>
+      <td>Adam Scott +1
+-1 thru 2</td>
+      <td class="greyout leftborder">Brooks Koepka(W) +3
+E thru 12</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Hadrian&#39;s Wall</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith -2
++2 thru 4</td>
+      <td>Patrick Cantlay -1
++1 thru 14</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td>Hideki Matsuyama -1
--1 thru 2</td>
-      <td>Shane Lowry +1
-E thru 5</td>
-      <td class="greyout leftborder">Jon Rahm +1
+      <td>Will Zalatoris E
++1 thru 14</td>
+      <td class="greyout leftborder">Jon Rahm(W) +1
 -1 thru 14</td>
       <td class="greyout">Viktor Hovland +3
 +3 thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Team Steve</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith(W) -2
++2 thru 4</td>
+      <td>Scottie Scheffler -2
++1 thru 1</td>
+      <td>Patrick Cantlay -1
++1 thru 14</td>
+      <td>Shane Lowry +1
+E thru 5</td>
+      <td class="greyout leftborder">Viktor Hovland +3
++3 thru 13</td>
+      <td class="greyout">Brooks Koepka +3
+E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Albert Selina</td>
@@ -346,38 +346,6 @@ E thru 5</td>
 -1 thru 14</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Santorini Sunrises</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith -3
-+1 thru 3</td>
-      <td>Corey Conners(W) -1
-+1 (F)</td>
-      <td>Will Zalatoris E
-+1 thru 14</td>
-      <td>Jon Rahm +1
--1 thru 14</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 12</td>
-      <td class="greyout">Jordan Spieth +4
-+2 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">BCREAMED</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith(W) -3
-+1 thru 3</td>
-      <td>Scottie Scheffler -2
-+1 thru 1</td>
-      <td>Patrick Cantlay -1
-+1 thru 14</td>
-      <td>Brooks Koepka +3
-E thru 12</td>
-      <td class="greyout leftborder">Sam Burns +5
-+2 thru 16</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Lyle Rattray</td>
@@ -412,52 +380,36 @@ Missed Cut</td>
 +3 thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Uphill into the Wind</td>
+      <td class="bigbold">The Resort</td>
       <td class="bigbold">-3</td>
-      <td>Cameron Smith -3
-+1 thru 3</td>
-      <td>Scottie Scheffler(W) -2
-+1 thru 1</td>
-      <td>Patrick Cantlay -1
-+1 thru 14</td>
-      <td>Brooks Koepka +3
-E thru 12</td>
-      <td class="greyout leftborder">Billy Horschel +4
-+2 thru 14</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">CRED</td>
-      <td class="bigbold">-2</td>
-      <td>Dustin Johnson -2
-+1 thru 15</td>
-      <td>Scottie Scheffler -2
-+1 thru 1</td>
-      <td>Patrick Cantlay -1
-+1 thru 14</td>
-      <td>Brooks Koepka(W) +3
-E thru 12</td>
-      <td class="greyout leftborder">Adam Scott +3
-+1 thru 1</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Don Shaw</td>
-      <td class="bigbold">-2</td>
-      <td>Cameron Smith -3
-+1 thru 3</td>
+      <td>Cameron Smith(W) -2
++2 thru 4</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td>Jon Rahm(W) +1
+      <td>Hideki Matsuyama -1
+-1 thru 2</td>
+      <td>Shane Lowry +1
+E thru 5</td>
+      <td class="greyout leftborder">Jon Rahm +1
 -1 thru 14</td>
-      <td>Tiger Woods +1
-+2 thru 3</td>
-      <td class="greyout leftborder">Sam Burns +5
-+2 thru 16</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 13</td>
+      <td class="greyout">Viktor Hovland +3
++3 thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Santorini Sunrises</td>
+      <td class="bigbold">-2</td>
+      <td>Cameron Smith -2
++2 thru 4</td>
+      <td>Corey Conners(W) -1
++1 (F)</td>
+      <td>Will Zalatoris E
++1 thru 14</td>
+      <td>Jon Rahm +1
+-1 thru 14</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 12</td>
+      <td class="greyout">Jordan Spieth +4
++2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Wilson</td>
@@ -476,52 +428,36 @@ E thru 12</td>
 +4 thru 13</td>
     </tr>
     <tr>
-      <td class="bigbold">Barb Wellard</td>
+      <td class="bigbold">BCREAMED</td>
       <td class="bigbold">-2</td>
-      <td>Joaquin Niemann -3
-E thru 3</td>
-      <td>Cameron Smith -3
-+1 thru 3</td>
-      <td>Jon Rahm(W) +1
--1 thru 14</td>
+      <td>Cameron Smith(W) -2
++2 thru 4</td>
+      <td>Scottie Scheffler -2
++1 thru 1</td>
+      <td>Patrick Cantlay -1
++1 thru 14</td>
       <td>Brooks Koepka +3
 E thru 12</td>
       <td class="greyout leftborder">Sam Burns +5
 +2 thru 16</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 13</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Bill Hunter</td>
+      <td class="bigbold">Uphill into the Wind</td>
       <td class="bigbold">-2</td>
-      <td>Cameron Smith(W) -3
-+1 thru 3</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Hideki Matsuyama -1
--1 thru 2</td>
-      <td>Marc Leishman +3
-+2 thru 17</td>
-      <td class="greyout leftborder">Justin Thomas +3
--1 thru 2</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-2</td>
-      <td>Cameron Smith -3
-+1 thru 3</td>
-      <td>Matthew Fitzpatrick E
-+1 thru 12</td>
-      <td>Will Zalatoris E
+      <td>Scottie Scheffler(W) -2
++1 thru 1</td>
+      <td>Cameron Smith -2
++2 thru 4</td>
+      <td>Patrick Cantlay -1
 +1 thru 14</td>
-      <td>Shane Lowry +1
-E thru 5</td>
-      <td class="greyout leftborder">Justin Thomas(W) +3
--1 thru 2</td>
-      <td class="greyout">Brooks Koepka +3
+      <td>Brooks Koepka +3
 E thru 12</td>
+      <td class="greyout leftborder">Billy Horschel +4
++2 thru 14</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
@@ -540,6 +476,22 @@ E thru 5</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Don Shaw</td>
+      <td class="bigbold">-1</td>
+      <td>Cameron Smith -2
++2 thru 4</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Jon Rahm(W) +1
+-1 thru 14</td>
+      <td>Tiger Woods +1
++2 thru 3</td>
+      <td class="greyout leftborder">Sam Burns +5
++2 thru 16</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 13</td>
+    </tr>
+    <tr>
       <td class="bigbold">Shane Hosegood</td>
       <td class="bigbold">-1</td>
       <td>Patrick Cantlay -1
@@ -556,20 +508,52 @@ Missed Cut</td>
 Out With Injury</td>
     </tr>
     <tr>
-      <td class="bigbold">New Lu</td>
+      <td class="bigbold">Barb Wellard</td>
       <td class="bigbold">-1</td>
-      <td>Cameron Smith -3
-+1 thru 3</td>
-      <td>Patrick Cantlay -1
-+1 thru 14</td>
-      <td>Will Zalatoris E
-+1 thru 14</td>
-      <td>Justin Thomas(W) +3
--1 thru 2</td>
-      <td class="greyout leftborder">Brooks Koepka +3
+      <td>Joaquin Niemann -3
+E thru 3</td>
+      <td>Cameron Smith -2
++2 thru 4</td>
+      <td>Jon Rahm(W) +1
+-1 thru 14</td>
+      <td>Brooks Koepka +3
 E thru 12</td>
+      <td class="greyout leftborder">Sam Burns +5
++2 thru 16</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Bill Hunter</td>
+      <td class="bigbold">-1</td>
+      <td>Cameron Smith(W) -2
++2 thru 4</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Hideki Matsuyama -1
+-1 thru 2</td>
+      <td>Marc Leishman +3
++2 thru 17</td>
+      <td class="greyout leftborder">Justin Thomas +3
+-1 thru 2</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-1</td>
+      <td>Cameron Smith -2
++2 thru 4</td>
+      <td>Matthew Fitzpatrick E
++1 thru 12</td>
+      <td>Will Zalatoris E
++1 thru 14</td>
+      <td>Shane Lowry +1
+E thru 5</td>
+      <td class="greyout leftborder">Justin Thomas(W) +3
+-1 thru 2</td>
+      <td class="greyout">Brooks Koepka +3
+E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Low Golf IQ</td>
@@ -636,34 +620,18 @@ E thru 12</td>
 +2 thru 13</td>
     </tr>
     <tr>
-      <td class="bigbold">Baggy Pants</td>
+      <td class="bigbold">New Lu</td>
       <td class="bigbold">0</td>
-      <td>Cameron Smith -3
-+1 thru 3</td>
+      <td>Cameron Smith -2
++2 thru 4</td>
       <td>Patrick Cantlay -1
 +1 thru 14</td>
-      <td>Shane Lowry +1
-E thru 5</td>
+      <td>Will Zalatoris E
++1 thru 14</td>
       <td>Justin Thomas(W) +3
 -1 thru 2</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-+3 thru 13</td>
-      <td class="greyout">Brooks Koepka +3
+      <td class="greyout leftborder">Brooks Koepka +3
 E thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">0</td>
-      <td>Cameron Smith -3
-+1 thru 3</td>
-      <td>Hideki Matsuyama -1
--1 thru 2</td>
-      <td>Tiger Woods +1
-+2 thru 3</td>
-      <td>Justin Thomas +3
--1 thru 2</td>
-      <td class="greyout leftborder">Rory McIlroy(W) +4
-+3 thru 12</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 13</td>
     </tr>
@@ -700,6 +668,22 @@ E thru 12</td>
 +2 thru 13</td>
     </tr>
     <tr>
+      <td class="bigbold">Baggy Pants</td>
+      <td class="bigbold">1</td>
+      <td>Cameron Smith -2
++2 thru 4</td>
+      <td>Patrick Cantlay -1
++1 thru 14</td>
+      <td>Shane Lowry +1
+E thru 5</td>
+      <td>Justin Thomas(W) +3
+-1 thru 2</td>
+      <td class="greyout leftborder">Viktor Hovland +3
++3 thru 13</td>
+      <td class="greyout">Brooks Koepka +3
+E thru 12</td>
+    </tr>
+    <tr>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">1</td>
       <td>Dustin Johnson -2
@@ -732,6 +716,22 @@ E thru 12</td>
 +2 thru 16</td>
     </tr>
     <tr>
+      <td class="bigbold">Jack Fleck</td>
+      <td class="bigbold">1</td>
+      <td>Cameron Smith -2
++2 thru 4</td>
+      <td>Hideki Matsuyama -1
+-1 thru 2</td>
+      <td>Tiger Woods +1
++2 thru 3</td>
+      <td>Justin Thomas +3
+-1 thru 2</td>
+      <td class="greyout leftborder">Rory McIlroy(W) +4
++3 thru 12</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 13</td>
+    </tr>
+    <tr>
       <td class="bigbold">Roy Jeffrey A</td>
       <td class="bigbold">2</td>
       <td>Patrick Cantlay -1
@@ -761,22 +761,6 @@ E thru 12</td>
       <td class="greyout leftborder">Rory McIlroy +4
 +3 thru 12</td>
       <td class="greyout">Xander Schauffele(W) +6
-+4 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">2</td>
-      <td>Cameron Smith(W) -3
-+1 thru 3</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Viktor Hovland +3
-+3 thru 13</td>
-      <td>Justin Thomas +3
--1 thru 2</td>
-      <td class="greyout leftborder">Jordan Spieth +4
-+2 thru 13</td>
-      <td class="greyout">Xander Schauffele +6
 +4 thru 13</td>
     </tr>
     <tr>
@@ -828,6 +812,22 @@ E thru 12</td>
 +4 thru 13</td>
     </tr>
     <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">3</td>
+      <td>Cameron Smith(W) -2
++2 thru 4</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Viktor Hovland +3
++3 thru 13</td>
+      <td>Justin Thomas +3
+-1 thru 2</td>
+      <td class="greyout leftborder">Jordan Spieth +4
++2 thru 13</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 13</td>
+    </tr>
+    <tr>
       <td class="bigbold">Jabby</td>
       <td class="bigbold">3</td>
       <td>Corey Conners -1
@@ -858,22 +858,6 @@ E thru 12</td>
 -1 thru 2</td>
       <td class="greyout">Rory McIlroy +4
 +3 thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glitter Girl</td>
-      <td class="bigbold">4</td>
-      <td>Cameron Smith -3
-+1 thru 3</td>
-      <td>Jon Rahm(W) +1
--1 thru 14</td>
-      <td>Viktor Hovland +3
-+3 thru 13</td>
-      <td>Bubba Watson +3
-+2 thru 17</td>
-      <td class="greyout leftborder">Rory McIlroy +4
-+3 thru 12</td>
-      <td class="greyout">Jordan Spieth +4
-+2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Wylie</td>
@@ -922,6 +906,22 @@ E thru 12</td>
 +2 thru 13</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Glitter Girl</td>
+      <td class="bigbold">5</td>
+      <td>Cameron Smith -2
++2 thru 4</td>
+      <td>Jon Rahm(W) +1
+-1 thru 14</td>
+      <td>Viktor Hovland +3
++3 thru 13</td>
+      <td>Bubba Watson +3
++2 thru 17</td>
+      <td class="greyout leftborder">Rory McIlroy +4
++3 thru 12</td>
+      <td class="greyout">Jordan Spieth +4
++2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Fred Jamieson</td>
@@ -1036,22 +1036,6 @@ E thru 12</td>
 +2 thru 13</td>
     </tr>
     <tr>
-      <td class="bigbold">Benjac</td>
-      <td class="bigbold">9</td>
-      <td>Cameron Smith -3
-+1 thru 3</td>
-      <td>Justin Thomas(W) +3
--1 thru 2</td>
-      <td>Rory McIlroy +4
-+3 thru 12</td>
-      <td>Sam Burns +5
-+2 thru 16</td>
-      <td class="greyout leftborder">Xander Schauffele +6
-+4 thru 13</td>
-      <td class="greyout">Justin Rose +8
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Tony Muir</td>
       <td class="bigbold">10</td>
       <td>Jon Rahm(W) +1
@@ -1082,6 +1066,22 @@ E thru 12</td>
 +2 thru 13</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Benjac</td>
+      <td class="bigbold">10</td>
+      <td>Cameron Smith -2
++2 thru 4</td>
+      <td>Justin Thomas(W) +3
+-1 thru 2</td>
+      <td>Rory McIlroy +4
++3 thru 12</td>
+      <td>Sam Burns +5
++2 thru 16</td>
+      <td class="greyout leftborder">Xander Schauffele +6
++4 thru 13</td>
+      <td class="greyout">Justin Rose +8
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Bryan Francis</td>
